prometheus/alertmanager/alertmanager-ha-deploy-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-1
  namespace: kbaas-qa2
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9093'

spec:
  selector:
    app: alertmanager
  ports:
    - name: http-port
      port: 9093
      targetPort: 9093
      protocol: TCP
    - name: cluster-port
      port: 8001
      targetPort: 8001
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager-1
  namespace: kbaas-qa2
  labels:
    app: alertmanager
spec:
  replicas: 1
  serviceName: alertmanager-1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
        version: 1.0.1
    spec:
      containers:
        - name: alertmanager
          image: alertmanager:v1.0.0
          imagePullPolicy: Always
          args:
            - "--config.file=/alertmanager/alertmanager.yml"
            - "--cluster.listen-address=0.0.0.0:8001"
            - "--cluster.advertise-address=$(POD_IP):8001"
            - "--cluster.peer=alertmanager-0.kbaas-qa2.svc:8001"
          ports:
            - name: http-port
              containerPort: 9093
              protocol: TCP
            - name: cluster-port
              containerPort: 8001
              protocol: TCP
          volumeMounts:
            - name: alertmanager-config
              mountPath: /alertmanager/alertmanager.yml
              subPath: alertmanager.yml
            - name: dependent-config
              mountPath: /alertmanager/app.ini
              subPath: app.ini
      volumes:
        - name: alertmanager-config
          configMap:
            name: alertmanager
            items:
            - key: alertmanager.yml
              path: alertmanager.yml
        - name: dependent-config
          configMap:
            name: general-app-config
            items:
            - key: app.ini
              path: app.ini
