prometheus/alertmanager/alertmanager-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ui
  namespace: kbaas-qa2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: alertmanager-ui.example.com
    http:
      paths:
      - backend:
          serviceName: alertmanager-0
          servicePort: 9093
      - backend:
          serviceName: alertmanager-1
          servicePort: 9093
